[package]
name = "tetris_v2"
version = "0.1.2"
authors = ["GIRARD Olivier <olivier.girard@reseau.eseo.fr>", "GALLAIS-POU Raphaël <raphael.gallaispou@reseau.eseo.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
termion = "4.0.3"
timer = "0.2.0"
chrono = "0.4.38"
anyhow = "1.0.94"
#tokio = "0.1.22"
#nix = "0.15.0"
