[package]
name = "tetris_v2"
version = "0.1.2"
authors = ["GIRARD Olivier <olivier.girard@reseau.eseo.fr>", "GALLAIS-POU Raphaël <raphael.gallaispou@reseau.eseo.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9"
termion = "4.0.5"
timer = "0.2.0"
chrono = "0.4.40"
anyhow = "1.0.97"
#tokio = "0.1.22"
#nix = "0.15.0"
